# android_kernel_ayn_common-modules

./: Android.mk  Kbuild  Makefile  Makefile.am  ayn-miniled.c  leds-htr3212.c  leds-sn3112.c  moorechip-joystick.c
config/: gki_moorechip.conf  gki_moorechipconf.h
focaltech_fp/: Kconfig  Makefile  ff_chip.c  ff_core.c  ff_core.h  ff_spi.c  ff_spi.h
