MOORECHIP_ROOT=$(ROOTDIR)vendor/moorechip/common-modules
KBUILD_OPTIONS := MOORECHIP_ROOT=$(MOORECHIP_ROOT) CONFIG_MSM_MOORECHIP=m

all:
	$(MAKE) -C $(KERNEL_SRC) M=$(M) modules $(KBUILD_OPTIONS)

modules_install:
	$(MAKE) INSTALL_MOD_STRIP=1 -C $(KERNEL_SRC) M=$(M) modules_install

%:
	$(MAKE) -C $(KERNEL_SRC) M=$(M) $@ $(KBUILD_OPTIONS)

clean:
	rm -f *.o *.ko *.mod.c *.mod.o *~ .*.cmd Module.symvers
	rm -rf .tmp_versions
